# haskell-cs194

./: .gitignore  README.md
10-parser/: parser.cabal
10-parser/src/: AParser.hs
11-parser2/: parser2.cabal
11-parser2/src/: SExpr.hs
12-risk/: risk.cabal
12-risk/src/: Main.hs  Risk.hs
5-calculator/: LICENSE  README.md  calculator.cabal
5-calculator/src/: Expr.hs  Main.hs  Parser.hs
7-editor/: editor.cabal
7-editor/src/: JoinList.hs  JoinListBuffer.hs  Main.hs  Scrabble.hs
8-employee/: employee.cabal
8-employee/src/: Employee.hs  Party.hs
