name:                parser2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rowland66/parser2#readme
license:             BSD3
license-file:        LICENSE
author:              Rowland Smith
maintainer:          rowls66@gmail.com
copyright:           Rowland Smith 2020
category:            none
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     AParser, SExpr
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
