name:                risk
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rowland66/risk#readme
license:             BSD3
license-file:        LICENSE
author:              Rowland Smith
maintainer:          rowls66@gmail.com
copyright:           Rowland Smith 2020
category:            none
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable risk
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Risk
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, MonadRandom, mtl
